--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
         <provider
             android:name=".provider.GlobalCtxProvider"
-            android:authorities="${applicationId}.GlobalContextProvider"
+            android:authorities="${applicationId}.common.GlobalContextProvider"
             android:enabled="true"
             android:exported="false" />
     </application>
